--- a/anotherapp/src/main/AndroidManifest.xml
+++ b/anotherapp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hongri.anotherapp">
+          package="com.hongri.anotherapp">
 
     <application
         android:allowBackup="true"
@@ -13,14 +13,18 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <service
             android:name=".CalculateService"
+            android:enabled="true"
+            android:exported="true"></service>
+        <service
+            android:name=".LibraryService"
             android:enabled="true"
             android:exported="true"></service>
     </application>
