多个业务方使用AIDL时，使用同一个Service

--- a/anotherapp/src/main/AndroidManifest.xml
+++ b/anotherapp/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".LibraryService"
             android:enabled="true"
             android:exported="true"></service>
+        <service
+            android:name=".BinderPoolService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
